# chiral-network

./: .gitignore  .npmrc  AUTORELAY_TESTING.md  CLAUDE.md  Dockerfile  HMAC_KEY_EXCHANGE_IMPLEMENTATION.md  HTTP_PROTOCOL_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MAC_TESTING_GUIDE.md  MIGRATION.md  QUICK_TEST_GUIDE.md  README-GIT.md  README.md  RELAY_SERVER_TOGGLE.md  SECURITY.md  STREAM_AUTH_IMPLEMENTATION.md  TESTING_GUIDE.md  TEST_MERGE.md  blockchain_listener.rs  clear-cache-complete.ps1  clear-cache-thorough.ps1  clear-icon-cache.bat  create-test-files.sh  genesis.json  index.html  package-lock.json  package.json  regenerate-final.cjs  run-bootstrap.sh  setup-git.sh  tailwind.config.js  test-dht.js  test-multi-source.sh  test-relay-local.sh  tsconfig.json  tsconfig.node.json  upgrade.sh  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: build.yml  download-restart-demo.yml  nat-tests.yml  test.yml
.tmp_tests/: signalingService.js
core/: Cargo.toml
core/src/: dht.rs  main.rs
demo/: http-transfer.sh
docs/: 01-system-overview.md  02-architecture.md  03-technical-specifications.md  04-implementation-guide.md  05-api-documentation.md  06-security-privacy.md  07-network-protocol.md  08-deployment-guide.md  BOOTSTRAP_HEALTH_INTEGRATION.md  DOWNLOAD_RESTART_USAGE.md  DOWNLOAD_SOURCE_USAGE.md  ED2K_PROTOCOL_IMPLEMENTATION.md  FTP_DEMO_QUICK_START.md  FTP_SOURCE_IMPLEMENTATION.md  HTTP_PROTOCOL_IMPLEMENTATION.md  ICON-REFRESH-GUIDE.md  PROPOSAL_chunk_hash_verification.md  PROXY_ROUTING_TESTING.md  PROXY_SELF_TEST.md  RELAY_ERROR_PROTOCOL.md  UNIFIED_SOURCE_ABSTRACTION_SUMMARY.md  add-french-bengali-arabic.plan.md  add-portuguese-hindi.plan.md  adr-001-blockchain-reputation.md  api-documentation.md  architecture.md  bittorrent-implementation-guide.md  blockchain-reputation-system.md  code-reading-guide.md  contributing.md  deployment-guide.md  developer-setup.md  download-restart.md  file-price-and-payment.md  file-sharing.md  heartbeat.md  i18n.md  implementation-guide.md  index.md  mac-power-monitoring.md  (+14 more)
frontend/: tsconfig.json  vite.config.ts
frontend/src/: App.svelte
frontend/src-tauri/: Cargo.toml
relay/: Cargo.toml  DEPLOYMENT.md  test_auth_demo.sh  test_auth_simple.sh
relay-infrastructure/: Cargo.toml  DEPLOYMENT.md  README.md
relay-infrastructure/scripts/: start-relay.sh  status-relay.sh
relay-infrastructure/src/: main.rs
relay-infrastructure/tests/: relay_integration_test.rs
relay/scripts/: stop-relay.sh
relay/src/: lib.rs  main.rs  relay_auth.rs
resources/: dht-architecture-proposal.md  dht-mvp.md  director.md  how_to_merge_transaction_api.md  pull_request_timeline.md
src/: App.svelte  SimpleTest.svelte  Test.svelte  main.ts
src-tauri/: .taurignore  Cargo.toml  DOWNLOAD_SOURCE_USAGE.md  Info.plist  crypto.rs  nsis-installer-hook.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: README_FTP_DEMO.md  check_ftp_setup.ps1  check_ftp_setup.sh  ftp_demo.rs  ftp_test.rs
src-tauri/geth-data/geth/: jwtsecret  nodekey
src-tauri/geth-data/geth/chaindata/: 000019.sst  MANIFEST-000010  MANIFEST-000017
src-tauri/geth-data/geth/nodes/: 000002.ldb  000005.ldb  LOG  MANIFEST-000007
src-tauri/icons/: icon.icns
src-tauri/src/: analytics.rs  bandwidth.rs  bittorrent.rs  bittorrent_handler.rs  blockchain_listener.rs  crypto.rs  dht.rs  dht_simple.rs  download_persistence.rs  download_restart.rs  download_scheduler.rs  download_source.rs  ed2k_client.rs  encryption.rs  errors.rs  ethereum.rs  file_transfer.rs  ftp_client.rs  ftp_downloader.rs  geth_bootstrap.rs  geth_downloader.rs  headless.rs  http_download.rs  http_range_client.rs  http_server.rs  keystore.rs  lib.rs  logger.rs  main.rs  manager.rs  mod.rs  mod_legacy.rs  multi_source_download.rs  peer_selection.rs  pool.rs  protocols.rs  protocols_legacy.rs  proxy_latency.rs  reassembly.rs  reputation.rs  (+5 more)
src-tauri/src/commands/: auth.rs  bootstrap.rs  mod.rs  network.rs  proxy.rs
src-tauri/src/config/: bittorrent.rs  mod.rs
src-tauri/src/control_plane/: handshake.rs  jwks.rs  mod.rs  token.rs
src-tauri/src/dht/: models.rs  protocol.rs
src-tauri/src/net/: mod.rs  proxy_server.rs
src-tauri/src/protocols/: bittorrent.rs  detection.rs  ed2k.rs  ftp.rs  http.rs  mod.rs  seeding.rs  traits.rs
src-tauri/tests/: analytics_integration_test.rs  download_fault_harness.rs  download_persistence_test.rs  download_restart_test.rs  download_source_test.rs  ed2k_client_test.rs  ed2k_integration_test.rs  ftp_downloader_test.rs  hmac_auth_test.rs  metadata_ed2k_source_test.rs  metadata_ftp_source_test.rs  mock_http_server.rs  nat_traversal_e2e_test.rs  nat_traversal_test.rs  orchestrator_ed2k_data_fetching_test.rs  orchestrator_ed2k_source_extraction_test.rs  orchestrator_ftp_integration_test.rs  protocol_manager_test.rs  tauri_ftp_commands_test.rs
src/i18n/: i18n.ts
src/lib/: confirmDialog.ts  crypto.ts  dht.ts  dhtHelpers.d.ts  dhtHelpers.js  dhtHelpers.ts  downloadTelemetry.ts  encryption.ts  geo.ts  (+12 more)
storage/: Cargo.toml
storage-node/: Cargo.toml
storage/src/: api.rs
tests/: README.md  apiClient.test.ts  bandwidthScheduler.test.ts  bittorrent.spec.ts  debounce.test.ts  dht.test.ts  dhtHelpers.test.mjs  dhtHelpers.test.ts  diagnostics.test.ts  downloadHistoryService.test.ts  encryption.test.ts  fileService.test.ts  geo.test.ts  hmacKeyExchange.test.ts  logger.test.ts  mining.test.ts  multi-source-download.test.mjs  multi-source-download.test.ts  paymentService.test.ts  peerSelection.test.mjs  peerSelection.test.ts  privacyService.test.ts  proxyLatencyOptimization.test.ts  proxyLoadBalancer.test.ts  proxyRouting.test.ts  reassembly.test.ts  reputation-persistence.test.ts  reputationRateLimiter.test.ts  routingWeights.test.ts  seedPersistence.test.ts  settingsBackupService.test.ts  signaling.client.integration.test.ts  signaling.client.node.test.ts  signaling.client.test.ts  signaling.client.unit.test.ts  signaling.server.test.mjs  signaling.server.test.ts  signaling.test.mjs  signaling.test.ts  signalingService.test.ts  (+7 more)
(+136 files in other folders)
