[package]
name = "chiral-relay-daemon"
version = "0.1.0"
edition = "2021"
description = "Dedicated Circuit Relay v2 daemon for Chiral Network"
authors = ["Chiral Network Team"]
license = "MIT"

[[bin]]
name = "chiral-relay"
path = "src/main.rs"

[[bin]]
name = "test_client"
path = "src/bin/test_client.rs"

[dependencies]
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "relay", "identify", "macros", "ping", "autonat", "tokio", "request-response"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
rand = "0.8"
async-trait = "0.1"
async-std = { version = "1.12", features = ["attributes"] }
web-time = "1.1"

[profile.dev]
incremental = true
opt-level = 0
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2
debug = false

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
