[package]
name = "chiral-network"
version = "0.1.0"
description = "Chiral Network - IPFS-like decentralized file sharing"
authors = ["Chiral Network Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-process = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2"
secp256k1 = { version = "0.27", features = ["rand", "serde"] }
rand = "0.8"
hex = "0.4"
sha3 = "0.10"
pbkdf2 = "0.12"
aes = "0.8"
ctr = "0.9"
hmac = "0.12"
directories = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
debug = false
