[package]
name = "chiral-network"
version = "0.1.0"
description = "Chiral Network - IPFS-like decentralized file sharing"
authors = ["Chiral Network Team"]
license = "MIT"
repository = ""
edition = "2021"
default-run = "chiral-network"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-process = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
secp256k1 = { version = "0.24", features = ["rand", "serde"] }
rand = "0.8"
hex = "0.4"
sha3 = "0.10"
sha2 = "0.10"
aes-gcm = "0.10"
x25519-dalek = { version = "2.0", features = ["serde"] }
hkdf = "0.12"
pbkdf2 = "0.12"
aes = "0.8"
ctr = "0.9"
hmac = "0.12"
directories = "5.0"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
tokio = { version = "1", features = ["full"] }
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
futures-util = "0.3"
systemstat = "0.2.5"
sysinfo = "0.31"
sys-locale = "0.3"
libp2p = { version = "0.54", features = ["kad", "mdns", "noise", "tcp", "yamux", "identify", "gossipsub", "macros", "tokio", "rsa", "request-response", "relay", "autonat", "dcutr", "ping"] }
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
fs2 = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
debug = false
