[package]
name = "chiral-network"
version = "0.1.0"
description = "Chiral Network - IPFS-like decentralized file sharing"
authors = ["Chiral Network Team"]
license = "MIT"
repository = ""
edition = "2021"
default-run = "chiral-network"

[lib]
name = "chiral_network"
path = "src/lib.rs"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-process = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
secp256k1 = { version = "0.24", features = ["serde", "rand-std"] }
rand = { version = "0.8", features = ["std_rng"] }
totp-rs = { version = "5.7.0", features = ["otpauth"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }
hex = "0.4"
sha3 = "0.10"
sha2 = "0.10"
base64 = "0.21"
aes-gcm = "0.10"
x25519-dalek = { version = "2.0", features = ["serde", "static_secrets"] }
hkdf = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
aes = "0.8"
ctr = "0.9"
hmac = "0.12"
directories = "5.0"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
futures = "0.3"
futures-util = "0.3"
systemstat = "0.2.5"
sysinfo = "0.31"
sys-locale = "0.3"
libp2p = { version = "0.54", features = ["kad", "mdns", "noise", "tcp", "quic", "yamux", "identify", "gossipsub", "macros", "tokio", "rsa", "request-response", "relay", "ping", "autonat", "dcutr"] }
if-addrs = "0.10"
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
fs2 = "0.4"
glob = "0.3"
rs_merkle = "1.5.0"
tokio-util = { version = "0.7", features = ["compat"] }
tokio-socks = "0.5"

# Bitswap and related dependencies
beetswap = { git = "https://github.com/totoro-ming-lin/beetswap.git", branch = "older-version" }
multihash-codetable = { version = "0.1", features = ["blake3", "sha2", "sha3"] }
cid = { version = "0.11.1", features = ["serde-codec"] }
blockstore = { version = "0.7.0", features = ["redb"] }

# WebRTC dependencies for P2P file transfers
webrtc = "0.10"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tauri-plugin-fs = "2"
ed25519-dalek = { version = "2.0", features = ["rand_core", "serde"] }
memmap2 = "0.9"
serde_bytes = "0.11.19"

[dev-dependencies]
tempfile = "3.8"

[lints.rust]
unused_variables = "allow"
dead_code = "allow"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true
opt-level = 0

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
debug = false
